Done : Admin Panel Category Screens

--- a/OunoRentAdminPanel/Views/NavbarPartial/_navbarPartial.cshtml
+++ b/OunoRentAdminPanel/Views/NavbarPartial/_navbarPartial.cshtml
@@ -72,9 +72,17 @@
                 </a>
                 <ul class="menu-sub">
                     <li class="menu-item">
-                        <a href="./Sliders" class="menu-link">
+                        <a asp-controller="Home" asp-action="Sliders" class="menu-link">
                             <i class='menu-icon bx bx-file'></i>
-                            <div data-i18n="Banners">Banners</div>
+                            <div data-i18n="Sliders">Sliders</div>
+                        </a>
+                    </li> 
+                </ul>
+                     <ul class="menu-sub">
+                    <li class="menu-item">
+                        <a asp-controller="Category" asp-action="Index" class="menu-link">
+                            <i class='menu-icon bx bx-file'></i>
+                            <div data-i18n="Kategoriler">Kategoriler</div>
                         </a>
                     </li> 
                 </ul>
