--- a/OunoRentAdminPanel/Views/Home/Sliders.cshtml
+++ b/OunoRentAdminPanel/Views/Home/Sliders.cshtml
@@ -10,14 +10,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DataTable Example</title>
     <link rel="stylesheet" href="./Slider.css">
-    @* <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700&display=swap" rel="stylesheet"> *@
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700&display=swap" rel="stylesheet">
 </head>
 
 <body>
+
+    @* #region Slider Datatable *@
     <div class="container" style="border-width: 5px;">
         <div class="row">
             <div class="col-md-12">
-                <a href ="./Slider" class="btn btn-primary"
+                <a href="./AddSlider" class="btn btn-success"
                     style=" width:8%; float: right; margin-top: 5%; margin-right: 10%;">Yeni Ekle</a>
             </div>
         </div>
@@ -36,10 +38,10 @@
                     <td>Örnek Başlık 1</td>
                     <td><a href="https://example.com">https://example.com</a></td>
                     <td>1</td>
-                    <td><img src="https://via.placeholder.com/100" alt="Image 1"></td>
+                    <td><img src="https://via.placeholder.com/50" alt="Image 1"></td>
                     <td>
                         <div class="d-flex justify-content-center align-items-center"><button type="button"
-                                class="btn btn-primary" data-bs-toggle="modal"
+                                class="btn btn-success" data-bs-toggle="modal"
                                 data-bs-target="#exampleModal">Düzenle</button></div>
                     </td>
                 </tr>
@@ -47,37 +49,59 @@
                     <td>Örnek Başlık 2</td>
                     <td><a href="https://example.com">https://example.com</a></td>
                     <td>2</td>
-                    <td><img src="https://via.placeholder.com/100" alt="Image 2"></td>
+                    <td><img src="https://via.placeholder.com/50" alt="Image 2"></td>
                     <td>
                         <div class="d-flex justify-content-center align-items-center"><button
-                                class="btn btn-primary">Düzenle</button></div>
+                                class="btn btn-success">Düzenle</button></div>
                     </td>
                 </tr>
                 <tr>
                     <td>Örnek Başlık 3</td>
                     <td><a href="https://example.com">https://example.com</a></td>
                     <td>3</td>
-                    <td><img src="https://via.placeholder.com/100" alt="Image 3"></td>
+                    <td><img src="https://via.placeholder.com/50" alt="Image 3"></td>
                     <td>
                         <div class="d-flex justify-content-center align-items-center"><button
-                                class="btn btn-primary">Düzenle</button></div>
+                                class="btn btn-success">Düzenle</button></div>
                     </td>
                 </tr>
                 <tr>
                     <td>Örnek Başlık 4</td>
                     <td><a href="https://example.com">https://example.com</a></td>
                     <td>4</td>
-                    <td><img src="https://via.placeholder.com/100" alt="Image 4"></td>
+                    <td><img src="https://via.placeholder.com/50" alt="Image 4"></td>
                     <td>
                         <div class="d-flex justify-content-center align-items-center"><button
-                                class="btn btn-primary">Düzenle</button></div>
+                                class="btn btn-success">Düzenle</button></div>
+                    </td>
+                </tr>
+                <tr>
+                    <td>Örnek Başlık 5</td>
+                    <td><a href="https://example.com">https://example.com</a></td>
+                    <td>5</td>
+                    <td><img src="https://via.placeholder.com/50" alt="Image 5"></td>
+                    <td>
+                        <div class="d-flex justify-content-center align-items-center"><button
+                                class="btn btn-success">Düzenle</button></div>
+                    </td>
+                </tr>
+                <tr>
+                    <td>Örnek Başlık 6</td>
+                    <td><a href="https://example.com">https://example.com</a></td>
+                    <td>6</td>
+                    <td><img src="https://via.placeholder.com/50" alt="Image 6"></td>
+                    <td>
+                        <div class="d-flex justify-content-center align-items-center"><button
+                                class="btn btn-success">Düzenle</button></div>
                     </td>
                 </tr>
             </tbody>
         </table>
 
     </div>
-    @* Modal Banner Edit *@
+    @* #endregion *@
+
+    @* #region Edit Slider *@
     <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
@@ -107,4 +131,6 @@
             </div>
         </div>
     </div>
+    @* #endregion *@
+
 </body>
