Fixed : Admin Panel Slider

--- a/OunoRentAdminPanel/Views/NavbarPartial/_navbarPartial.cshtml
+++ b/OunoRentAdminPanel/Views/NavbarPartial/_navbarPartial.cshtml
@@ -72,7 +72,7 @@
                 </a>
                 <ul class="menu-sub">
                     <li class="menu-item">
-                        <a asp-controller="Home" asp-action="Sliders" class="menu-link">
+                        <a asp-controller="Slider" asp-action="Sliders" class="menu-link">
                             <i class='menu-icon bx bx-file'></i>
                             <div data-i18n="Sliders">Sliders</div>
                         </a>
