--- a/OunoRentAdminPanel/Views/Slider/Sliders.cshtml
+++ b/OunoRentAdminPanel/Views/Slider/Sliders.cshtml
@@ -15,94 +15,123 @@
 
 <body>
 
-    @* #region Slider Datatable *@
+        <!-- Slider Datatable -->
     <div class="container" style="border-width: 5px;">
         <div class="row">
             <div class="col-md-12">
-                <a href="./AddSlider" class="btn btn-success"
+                <a asp-controller="Slider" asp-action="AddSlider" class="btn btn-success"
                     style=" width:8%; float: right; margin-top: 5%; margin-right: 10%;">Yeni Ekle</a>
             </div>
         </div>
         <table>
             <thead>
                 <tr>
+                    <th>Id</th>
                     <th>Başlık</th>
                     <th>Yönlendirme Adresi</th>
                     <th>Sıralama</th>
                     <th>Img</th>
-                    <th></th>
+                    <th class="text-center">Menu</th>
                 </tr>
             </thead>
             <tbody>
                 <tr>
+                    <td>5346544563</td>
                     <td>Örnek Başlık 1</td>
                     <td><a href="https://example.com">https://example.com</a></td>
                     <td>1</td>
                     <td><img src="https://via.placeholder.com/50" alt="Image 1"></td>
                     <td>
-                        <div class="d-flex justify-content-center align-items-center"><button type="button"
-                                class="btn btn-success" data-bs-toggle="modal"
-                                data-bs-target="#exampleModal">Düzenle</button></div>
+                        <div class="w-75 d-flex gap-3">
+                            <button type="button" class="btn btn-success" data-bs-toggle="modal"
+                                data-bs-target="#editModal">Düzenle</button>
+                            <button type="button" class="btn btn-danger" data-bs-toggle="modal"
+                                data-bs-target="#confirmDeleteModal">Sil</button>
+                        </div>
                     </td>
                 </tr>
                 <tr>
+                    <td>53678544563</td>
+
                     <td>Örnek Başlık 2</td>
                     <td><a href="https://example.com">https://example.com</a></td>
                     <td>2</td>
                     <td><img src="https://via.placeholder.com/50" alt="Image 2"></td>
                     <td>
-                        <div class="d-flex justify-content-center align-items-center"><button
-                                class="btn btn-success">Düzenle</button></div>
+                        <div class="w-75 d-flex gap-3">
+                            <button type="button" class="btn btn-success" data-bs-toggle="modal"
+                                data-bs-target="#editModal">Düzenle</button>
+                            <button type="button" class="btn btn-danger" data-bs-toggle="modal"
+                                data-bs-target="#confirmDeleteModal">Sil</button>
+                        </div>
                     </td>
                 </tr>
                 <tr>
+                    <td>5346544563</td>
                     <td>Örnek Başlık 3</td>
                     <td><a href="https://example.com">https://example.com</a></td>
                     <td>3</td>
                     <td><img src="https://via.placeholder.com/50" alt="Image 3"></td>
                     <td>
-                        <div class="d-flex justify-content-center align-items-center"><button
-                                class="btn btn-success">Düzenle</button></div>
+                        <div class="w-75 d-flex gap-3">
+                            <button type="button" class="btn btn-success" data-bs-toggle="modal"
+                                data-bs-target="#editModal">Düzenle</button>
+                            <button type="button" class="btn btn-danger" data-bs-toggle="modal"
+                                data-bs-target="#confirmDeleteModal">Sil</button>
+                        </div>
                     </td>
                 </tr>
                 <tr>
+                    <td>5346544563</td>
                     <td>Örnek Başlık 4</td>
                     <td><a href="https://example.com">https://example.com</a></td>
                     <td>4</td>
                     <td><img src="https://via.placeholder.com/50" alt="Image 4"></td>
                     <td>
-                        <div class="d-flex justify-content-center align-items-center"><button
-                                class="btn btn-success">Düzenle</button></div>
+                        <div class="w-75 d-flex gap-3">
+                            <button type="button" class="btn btn-success" data-bs-toggle="modal"
+                                data-bs-target="#editModal">Düzenle</button>
+                            <button type="button" class="btn btn-danger" data-bs-toggle="modal"
+                                data-bs-target="#confirmDeleteModal">Sil</button>
+                        </div>
                     </td>
                 </tr>
                 <tr>
+                    <td>5346544563</td>
                     <td>Örnek Başlık 5</td>
                     <td><a href="https://example.com">https://example.com</a></td>
                     <td>5</td>
                     <td><img src="https://via.placeholder.com/50" alt="Image 5"></td>
                     <td>
-                        <div class="d-flex justify-content-center align-items-center"><button
-                                class="btn btn-success">Düzenle</button></div>
+                        <div class="w-75 d-flex gap-3">
+                            <button type="button" class="btn btn-success" data-bs-toggle="modal"
+                                data-bs-target="#editModal">Düzenle</button>
+                            <button type="button" class="btn btn-danger" data-bs-toggle="modal"
+                                data-bs-target="#confirmDeleteModal">Sil</button>
+                        </div>
                     </td>
                 </tr>
                 <tr>
+                    <td>5346544563</td>
                     <td>Örnek Başlık 6</td>
                     <td><a href="https://example.com">https://example.com</a></td>
                     <td>6</td>
                     <td><img src="https://via.placeholder.com/50" alt="Image 6"></td>
                     <td>
-                        <div class="d-flex justify-content-center align-items-center"><button
-                                class="btn btn-success">Düzenle</button></div>
+                        <div class="w-75 d-flex gap-3">
+                            <button type="button" class="btn btn-success" data-bs-toggle="modal"
+                                data-bs-target="#editModal">Düzenle</button>
+                            <button type="button" class="btn btn-danger" data-bs-toggle="modal"
+                                data-bs-target="#confirmDeleteModal">Sil</button>
+                        </div>
                     </td>
                 </tr>
             </tbody>
         </table>
-
     </div>
-    @* #endregion *@
 
-    @* #region Edit Slider *@
-    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <!-- Edit Slider Modal -->
+    <div class="modal fade" id="editModal" tabindex="-1" aria-labelledby="editModal" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
@@ -131,6 +160,25 @@
             </div>
         </div>
     </div>
-    @* #endregion *@
+   
+
+        <!-- Confirm Delete Modal -->
+<div class="modal fade" id="confirmDeleteModal" tabindex="-1" aria-labelledby="confirmDeleteModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="confirmDeleteModalLabel">Silme Onayı</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                Bu öğeyi silmek istediğinize emin misiniz?
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">İptal</button>
+                <button type="button" class="btn btn-danger" id="confirmDeleteButton">Sil</button>
+            </div>
+        </div>
+    </div>
+</div>
 
 </body>
