--- a/OunoRentAdminPanel/Views/Category/Index.cshtml
+++ b/OunoRentAdminPanel/Views/Category/Index.cshtml
@@ -8,7 +8,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DataTable Example</title>
+    <title>Category Datatable</title>
     <link rel="stylesheet" href="./Slider.css">
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700&display=swap" rel="stylesheet">
 </head>
