--- a/OunoRentAdminPanel/Views/NavbarPartial/_navbarPartial.cshtml
+++ b/OunoRentAdminPanel/Views/NavbarPartial/_navbarPartial.cshtml
@@ -1,6 +1,4 @@
 <div class="position-fixed h-100">
-
-
     <aside id="layout-menu" class="layout-menu menu-vertical menu bg-menu-theme h-100">
         <div class="app-brand demo">
             <a href="index.html" class="app-brand-link">
@@ -63,18 +61,18 @@
     <li class="menu-item active open">
         <a href="javascript:void(0);" class="menu-link">
             <i class="menu-icon tf-icons bx bx-home-circle"></i>
-            <div data-i18n="Anasayfa">Anasayfa</div>
+            <div>Anasayfa</div>
         </a>
             <li class="menu-item">
                 <a href="" class="menu-link menu-toggle">
                     <i class='menu-icon bx bx-file'></i>
-                    <div data-i18n="İçerik Yönetim">İçerik Yönetim</div>
+                    <div>İçerik Yönetim</div>
                 </a>
                 <ul class="menu-sub">
                     <li class="menu-item">
                         <a asp-controller="Slider" asp-action="Sliders" class="menu-link">
                             <i class='menu-icon bx bx-file'></i>
-                            <div data-i18n="Sliders">Sliders</div>
+                            <div>Sliders</div>
                         </a>
                     </li> 
                 </ul>
@@ -82,7 +80,7 @@
                     <li class="menu-item">
                         <a asp-controller="Category" asp-action="Index" class="menu-link">
                             <i class='menu-icon bx bx-file'></i>
-                            <div data-i18n="Kategoriler">Kategoriler</div>
+                            <div>Kategoriler</div>
                         </a>
                     </li> 
                 </ul>
@@ -90,44 +88,44 @@
             <li class="menu-item">
                 <a href="./Slider" class="menu-link">
                     <i class='menu-icon bx bxs-report'></i>
-                    <div data-i18n="Raporlar">Raporlar</div>
+                    <div>Raporlar</div>
                 </a>
             </li>
     </li>
     <li class="menu-item">
         <a href="" class="menu-link">
             <i class='menu-icon bx bxs-package'></i>
-            <div data-i18n="Ürün Yönetimi">Ürün Yönetimi</div>
+            <div>Ürün Yönetimi</div>
         </a>
     </li>
     <li class="menu-item">
         <a href="" class="menu-link">
             <i class="menu-icon tf-icons bx bx-user"></i>
-            <div data-i18n="Kullanıcı Yönetimi">Kullanıcı Yönetimi</div>
+            <div>Kullanıcı Yönetimi</div>
         </a>
     </li>
     <li class="menu-item">
         <a href="" class="menu-link">
             <i class="menu-icon tf-icons bx bx-support"></i>
-            <div data-i18n="Müşteri Hizmetleri">Müşteri Hizmetleri</div>
+            <div>Müşteri Hizmetleri</div>
         </a>
     </li>
     <li class="menu-item">
         <a href="" class="menu-link">
             <i class="menu-icon tf-icons bx bxs-star"></i>
-            <div data-i18n="Kampanyalar">Kampanyalar</div>
+            <div>Kampanyalar</div>
         </a>
     </li>
     <li class="menu-item">
         <a href="" class="menu-link">
             <i class="menu-icon tf-icons bx bxs-file-blank"></i>
-            <div data-i18n="Hukuki Metinler">Hukuki Metinler</div>
+            <div>Hukuki Metinler</div>
         </a>
     </li>
     <li class="menu-item">
         <a href="" class="menu-link">
             <i class="menu-icon tf-icons bx bx-check-shield"></i>
-            <div data-i18n="Rol Yönetimi">Rol Yönetimi</div>
+            <div>Rol Yönetimi</div>
         </a>
     </li>
 </ul>
