--- a/OunoRentAdminPanel/Views/Category/AddCategory.cshtml
+++ b/OunoRentAdminPanel/Views/Category/AddCategory.cshtml
@@ -14,6 +14,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title></title>
+
+    <link rel="stylesheet" href="/css/slider.css" />
+    <link rel="stylesheet" href="/css/sliders.css" />
 </head>
 
 <body>
