--- a/OunoRentAdminPanel/Views/Category/Index.cshtml
+++ b/OunoRentAdminPanel/Views/Category/Index.cshtml
@@ -9,8 +9,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Category Datatable</title>
-    <link rel="stylesheet" href="./Slider.css">
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700&display=swap" rel="stylesheet">
+    
+    <link rel="stylesheet" href="/css/slider.css" />
+    <link rel="stylesheet" href="/css/sliders.css" />
 </head>
 
 <body>
