--- a/OunoRentAdminPanel/Views/Slider/Sliders.cshtml
+++ b/OunoRentAdminPanel/Views/Slider/Sliders.cshtml
@@ -11,6 +11,8 @@
     <title>Slider Datatable</title>
     <link rel="stylesheet" href="./Slider.css">
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="/css/slider.css" />
+    <link rel="stylesheet" href="/css/sliders.css" />
 </head>
 
 <body>
