Added : Remember me function

--- a/OunoRentAdminPanel/Views/Auth/Login.cshtml
+++ b/OunoRentAdminPanel/Views/Auth/Login.cshtml
@@ -89,8 +89,8 @@
                         </div>
                         <div class="mb-3">
                             <div class="form-check">
-                                <input class="form-check-input" type="checkbox" id="remember-me" />
-                                <label class="form-check-label" for="remember-me"> Hatırla Beni </label>
+                                <input class="form-check-input" asp-for="RememberMe" type="checkbox" id="RememberMe" />
+                                <label class="form-check-label"> Hatırla Beni </label>
                             </div>
                         </div>
                         <div class="mb-3">
