--- a/OunoRentAdminPanel/Views/Category/Index.cshtml
+++ b/OunoRentAdminPanel/Views/Category/Index.cshtml
@@ -1,6 +1,7 @@
 @using OunoRentAdminPanel.Models.EntityModels.CategoryModel
 @model List<CategoryViewModel>
 
+
 @{
     ViewData["Title"] = "Index";
     Layout = "~/Views/Shared/_Layout.cshtml";
@@ -20,7 +21,8 @@
 
 <body>
 
-    @* #region Slider Datatable *@
+       <!-- Slider Datatable -->
+
     <div class="container" style="border-width: 5px;">
         <div class="row">
             <div cla">
@@ -56,31 +58,8 @@
         </table>
 
     </div>
-    @* #endregion *@
 
-    @* #region Edit Category *@
-    <div class="modal fade" id="editModal" tabindex="-1" aria-labelledby="editModal" aria-hidden="true">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h1 class="modal-title fs-5" id="exampleModalLabel"></h1>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <div class="modal-body">
-                    <form action="index.html" method="post" enctype="multipart/form-data" class="formModal">
-                        <h1>Kategori</h1>
-                        <fieldset>
-                            <legend><span class="number">1</span> Kategori Düzenle</legend>
-                            <label for="name">Kategori Adı:</label>
-                            <input type="text" id="category_name" name="category_name">
-                        </fieldset>
-                        <button type="submit">Güncelle</button>
-                    </form>
-                </div>
-            </div>
-        </div>
-    </div>
-    @* #endregion *@
+   @await Html.PartialAsync("/Views/Shared/Partials/EditCategoryPartial/_EditCategoryPartial.cshtml")
 
     <!-- Silme Onay Modalı -->
     <div class="modal fade" id="confirmDeleteModal" tabindex="-1" aria-labelledby="confirmDeleteModalLabel"
